--- a/src/pages/situasjon/sykmeldt/sykmeldt.njk
+++ b/src/pages/situasjon/sykmeldt/sykmeldt.njk
@@ -10,6 +10,6 @@ chapters: 'sykmeldt'
 published: "Oppdatert 24. april 2025"
 alpine: true
 order: 2
-permalink: 'produkt/sykmeldt/index.html'
+permalink: 'situasjon/sykmeldt/index.html'
 layout: 'article-page.njk'
 ---
