--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -21,7 +21,7 @@
         {% endif -%}
       </div>
     </div>
-    <div class="mt-6 mb-6 col-main">
+    <div class="mt-6 mb-12 lg:mb-6 col-main">
       <p class="prose text-fluid-18-20 text-pretty">
         {{ ingress | safe }}
 
@@ -34,24 +34,24 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse sticky #}
-    <div class="lg:row-span-4 lg:sticky bg-white lg:row-start-2 lg:pl-8 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
-      <h2 class="sticky top-0 z-10 hidden tracking-wider uppercase pt-7 lg:block lg:bg-white text-fluid-14-16 opacity-80" >
+    <div class="flex flex-col bg-white lg:row-span-4 lg:sticky lg:row-start-2 lg:pl-8 xl:row-start-2 lg:top-0 col-toc toc" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
+      <h2 class="hidden pt-8 tracking-wider uppercase flex-0 lg:block text-fluid-12-14 text-slate-800/80" >
         Innhold på denne siden
       </h2>
-      <ul class="pb-8 lg:pt-2 lg:text-fluid-16-18/normal">
+      <ul class="flex-1 pb-8 overflow-auto lg:pt-2 lg:text-fluid-16-18/normal overscroll-contain">
         {% for chapter in chapters %}
           {% set chapterIndex = loop.index %}
-          <li>
-            <a class="inline-flex items-baseline py-1.5 pr-4 text-blue-600 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
+          <li class="mb-1">
+            <a class="inline-flex items-baseline pr-3 py-1.5 underline text-blue-600 hover:text-blue-700 hover:decoration-2 underline-offset-4 decoration-slate-400/40 hover:decoration-blue-700 {{ 'tocHighlight' if chapterIndex === 1 }}" href="#{{ chapter.data.title | slugify }}" x-on:click="tocOpen = false">
               {{ '/src/_includes/svg/icons/right-angle.svg' | svgContents('w-6 h-6 -ml-1 -translate-x-0.5 translate-y-1.5 shrink-0 opacity-85 lg:hidden') | safe  }}
               {{ chapter.data.title }}
             </a>
             {% if (chapter.templateContent | tocData).length >= 2 %}           
-            <ul class="hidden pb-1" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:block'">
+            <ul class="hidden" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'lg:block'">
               {% for item in chapter.templateContent | tocData %}
-              <li>
-                <a class="inline-flex py-1.5 pr-4 underline items-baseline text-blue-600 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
-                  {{ '/src/_includes/svg/icons/right-angle.svg' | svgContents('w-6 h-6 -ml-1 translate-y-1.5 -translate-x-0.5 shrink-0 opacity-85') | safe  }}
+              <li class="">
+                <a class="inline-flex items-start py-1.5 pr-3 underline text-blue-600 hover:text-blue-700 decoration-slate-400/40 hover:decoration-blue-700 underline-offset-4 hover:decoration-2" href="#{{ item.id }}" x-on:click="tocOpen = false">
+                  {{ '/src/_includes/svg/icons/right-angle.svg' | svgContents('w-6 h-6 -ml-1 -translate-x-0.5 shrink-0 opacity-85') | safe  }}
                   <span>{{ item.text }}</span>
                 </a>
               </li>
@@ -66,8 +66,8 @@
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.25%.0%.-75%.0%="chapterIndex = {{ chapterIndex }}">
-        <div class="w-8 h-[0.625ch] bg-brand-purple-faded mt-12"></div>
+      <section class="py-12 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.5%.0%.-80%.0%="chapterIndex = {{ chapterIndex }}">
+        <div class="w-8 h-[0.625ch] bg-brand-purple-faded"></div>
         <h2 class="mt-4 mb-4 -translate-x-0.5 font-bold text-fluid-28-36/tight text-balance text-brand-purple-deep" id="{{ chapter.data.title | slugify }}">
           <a href="#{{ chapter.data.title | slugify }}">
             <span>{{ chapter.data.title }}</span>
@@ -100,7 +100,7 @@
       <button x-on:click="tocOpen = !tocOpen" class="flex items-center gap-2 mx-auto max-w-main bg-slate-100 border border-b-0 border-slate-300 rounded-t-2xl justify-between cursor-pointer px-4 py-2.5 w-full  hover:bg-slate-50">
         <span class="flex items-center gap-2 mr-auto">
           {{ '/src/_includes/svg/icons/box-list.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}
-          <span>Innhold på denne siden</span>
+          <span>Innholdsfortegnelse</span>
         </span>
         <span x-show="!tocOpen">{{ '/src/_includes/svg/icons/chevron-up-down.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}</span>
         <span x-show="tocOpen">{{ '/src/_includes/svg/icons/chevron-down-up.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}</span>
@@ -110,14 +110,14 @@
           {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
             <li>
-              <a class="inline-flex items-baseline py-1.5 pr-4 font-semibold text-blue-600 underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700" href="#{{ chapter.data.title | slugify }}">
+              <a class="inline-flex items-baseline py-1.5 pr-4 font-semibold underline hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700" href="#{{ chapter.data.title | slugify }}">
                 {{ chapter.data.title }}
               </a>
               {% if (chapter.templateContent | tocData).length >= 2 %}           
               <ul class="pb-4">
                 {% for item in chapter.templateContent | tocData %}
                 <li>
-                  <a class="inline-flex py-1.5 pr-4 pl-1 underline items-baseline text-blue-600 hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
+                  <a class="inline-flex py-1.5 pr-4 pl-1 underline items-baseline hover:text-blue-700 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
                     {{ '/src/_includes/svg/icons/right-angle.svg' | svgContents('w-6 h-6 -ml-1 translate-y-1.5 -translate-x-0.5 shrink-0 opacity-85') | safe  }}
                     <span>{{ item.text }}</span>
                   </a>
@@ -160,7 +160,7 @@
               }
             })
         }, { 
-          rootMargin: '2% 0% -88% 0%',
+          rootMargin: '-2% 0% -80% 0%',
           threshold: 1
         }
       );
