--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-{%- set menuButtonClasses = "flex flex-col sm:flex-row items-center justify-center px-2 sm:pl-3.5 px-2 sm:pr-4 leading-none cursor-pointer gap-0.5 sm:gap-1 text-blue-600 min-w-0 py-2 sm:py-2.5 max-xs:text-fluid-16-18 rounded-full focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
+{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center px-2 xs:pl-3.5 px-2 xs:pr-4 leading-none cursor-pointer gap-0.5 xs:gap-1 text-blue-600 min-w-0 py-2 xs:py-2.5 max-xs:text-fluid-16-18 rounded-full focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 menu-button" -%}
 
 <div class="leading-tight text-center bg-deepblue-50 text-fluid-16-18 pt-0.5">
   <div class="py-1.5 xs:hidden">{{ audience.title or menu.audience[0].title }}</div>
