--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -21,8 +21,8 @@
         {% endif -%}
       </div>
     </div>
-    <div class="mt-6 mb-12 lg:mb-6 col-main">
-      <p class="prose text-fluid-18-20 text-pretty">
+    <div class="mt-6 mb-12 prose lg:mb-6 col-main">
+      <p class=" text-fluid-18-20 text-pretty">
         {{ ingress | safe }}
 
         {% if audience.others %}          
