--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -13,7 +13,7 @@
     </div>
     <div class="col-main md:col-start-[main] md:col-end-[container]">
       <h1 class="font-bold text-fluid-36-48/tight text-balance text-brand-purple-deep">{{ title | safe }}</h1>
-      <div class="mt-4 text-gray-700 text-fluid-12-14 font-regular">
+      <div class="mt-4 text-gray-700 text-fluid-14-16 font-regular">
         <span class="px-1.5 py-px rounded-sm bg-brand-purple-light">{{ category | safe }}</span>
         {%- if audience.description %}
           <span aria-hidden="true" class="inline-block mx-1">—</span>
@@ -21,7 +21,7 @@
         {% endif -%}
       </div>
     </div>
-    <div class="mt-6 mb-12 prose lg:mb-6 col-main">
+    <div class="mt-6 mb-6 prose col-main">
       <p class=" text-fluid-18-20 text-pretty">
         {{ ingress | safe }}
 
@@ -35,7 +35,7 @@
 
     {# Innholdsfortegnelse sticky #}
     <div class="flex flex-col bg-white lg:row-span-4 lg:sticky lg:row-start-2 lg:pl-8 xl:row-start-2 lg:top-0 col-toc toc" id="toc" x-intersect:enter="tocFixed = false, tocOpen = false" x-intersect:leave="tocFixed = true">
-      <h2 class="hidden pt-8 tracking-wider uppercase flex-0 lg:block text-fluid-12-14 text-slate-800/80" >
+      <h2 class="hidden tracking-wider uppercase pt-7 flex-0 lg:block text-fluid-12-14 text-slate-800/80" >
         Innhold på denne siden
       </h2>
       <ul class="flex-1 pb-8 lg:overflow-auto lg:pt-2 lg:text-fluid-16-18/normal overscroll-contain">
@@ -68,7 +68,7 @@
       {% set chapterIndex = loop.index %}
       <section class="py-12 prose col-main toc-chapter" id="{{ chapter.data.title | slugify }}" x-intersect.margin.5%.0%.-80%.0%="chapterIndex = {{ chapterIndex }}">
         <div class="w-8 h-[0.625ch] bg-brand-purple-faded"></div>
-        <h2 class="mt-4 mb-4 -translate-x-0.5 font-bold text-fluid-28-36/tight text-balance text-brand-purple-deep" id="{{ chapter.data.title | slugify }}">
+        <h2 class="mt-4 mb-4 -translate-x-0.5 font-bold text-fluid-28-36/tight text-pretty text-brand-purple-deep" id="{{ chapter.data.title | slugify }}">
           <a href="#{{ chapter.data.title | slugify }}">
             <span>{{ chapter.data.title }}</span>
           </a>
@@ -92,43 +92,6 @@
         {{ chapter.templateContent | markdown | safe }}
       </section>
     {% endfor %}
-    </div>
-
-{# x-on:click="tocOpen = false" #}
-
-    <div x-show="tocFixed" class="sticky inset-x-0 z-50 col-full bottom-2 lg:hidden" x-bind:class="tocOpen && 'drawerOpen'">
-      <button x-on:click="tocOpen = !tocOpen" class="flex items-center gap-2 mx-auto max-w-main bg-slate-100 border border-b-0 border-slate-300 rounded-t-2xl justify-between cursor-pointer px-4 py-2.5 w-full hover:bg-slate-50">
-        <span class="flex items-center gap-2 mr-auto">
-          {{ '/src/_includes/svg/icons/box-list.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}
-          <span>Innholdsfortegnelse</span>
-        </span>
-        <span x-show="!tocOpen">{{ '/src/_includes/svg/icons/chevron-up-down.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}</span>
-        <span x-show="tocOpen">{{ '/src/_includes/svg/icons/chevron-down-up.svg' | svgContents('w-5 h-5 -translate-y-px shrink-0 opacity-85') | safe  }}</span>
-      </button>
-      <div class="max-h-[70svh] overflow-y-auto overscroll-contain bg-white px-4 py-3 mx-auto max-w-main" x-show="tocOpen">
-        <ul class="pb-8 lg:pt-2 lg:text-fluid-16-18/normal">
-          {% for chapter in chapters %}
-            {% set chapterIndex = loop.index %}
-            <li>
-              <a class="inline-flex items-baseline py-1.5 pr-4 font-semibold underline text-blue-600 hover:text-blue-700 hover:decoration-2 underline-offset-3 decoration-slate-800/40 hover:decoration-blue-700" href="#{{ chapter.data.title | slugify }}">
-                {{ chapter.data.title }}
-              </a>
-              {% if (chapter.templateContent | tocData).length >= 2 %}           
-              <ul class="pb-4">
-                {% for item in chapter.templateContent | tocData %}
-                <li>
-                  <a class="inline-flex py-1.5 pr-4 pl-1 underline items-baseline hover:text-blue-700 text-blue-600 decoration-slate-800/40 hover:decoration-blue-700 underline-offset-3 hover:decoration-2" href="#{{ item.id }}">
-                    {{ '/src/_includes/svg/icons/right-angle.svg' | svgContents('w-6 h-6 -ml-1 translate-y-1.5 -translate-x-0.5 shrink-0 opacity-85') | safe  }}
-                    <span>{{ item.text }}</span>
-                  </a>
-                </li>
-                {% endfor %}
-              </ul>
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
     </div>
 
     <div class="pt-2 mt-12 italic border-t text-fluid-16-18 border-slate-200 col-main">
