--- a/src/pages/sok/sok.njk
+++ b/src/pages/sok/sok.njk
@@ -33,7 +33,7 @@ alpine: true
 
       {# Sortering og filter #}
       <div class="mt-8 md:mt-5 md:row-start-2 md:col-start-9 md:grid-flow-dense md:col-span-4 md:row-span-2">
-          <div class="fixed inset-y-0 right-0 z-50 flex flex-col w-10/12 h-full max-w-md bg-white shadow-lg md:w-full md:bg-transparent md:shadow-none md:static" x-bind:class="filterOpen ? ' animate-openDrawer ' : 'hidden md:block'" style="box-shadow:0 2in #fff">
+          <div class="fixed inset-y-0 right-0 z-50 flex flex-col w-10/12 h-full max-w-md bg-white shadow-lg md:w-full md:bg-transparent md:shadow-none md:static" x-bind:class="filterOpen ? ' animate-openDrawer ' : 'hidden md:block'" style="box-shadow:0 2in red">
 
           <div class="flex-1 p-5 overflow-y-auto overscroll-contain">
             {# Sortering #}
